charon/tests/ui/simple/promoted-closure.out
error: Unsupported constant by Hax: "Unhandled type"
 --> tests/ui/simple/promoted-closure.rs:4:5
  |
4 |     &|x: u32| x
  |     ^^^^^^^^^^^

ERROR Charon failed to translate this code (1 errors)
